<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:padding="2dp"
    >


    <ImageButton
        android:id="@+id/x"
        android:background="@android:color/transparent"
        android:src="@drawable/path957"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />


    <ScrollView
        android:id="@+id/scv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/cimsor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/autoplay"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/ta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/stop_auto"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="2dp">


                <com.xw.repo.BubbleSeekBar
                    android:id="@+id/sz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bsb_bubble_color="@color/colorAccent"
                    app:bsb_auto_adjust_section_mark="true"
                    app:bsb_bubble_text_color="@color/colorPrimaryDark"
                    app:bsb_max="250000"
                    app:bsb_min="0"
                    app:bsb_progress="0"
                    app:bsb_section_text_size="0sp"
                    app:bsb_second_track_color="@color/colorPrimary"
                    app:bsb_section_count="5"
                    app:bsb_section_text_position="sides"
                    app:bsb_show_progress_in_float="true"
                    app:bsb_show_section_mark="true"
                    app:bsb_show_section_text="true"
                    app:bsb_show_thumb_text="true"
                    app:bsb_track_color="@color/colorAccent" />
            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="2dp"

                >

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:background="#000" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/stop_auto"
                    android:textAlignment="center"
                    android:textStyle="bold" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/single_win"
                    android:textAlignment="gravity" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"

                >

                <com.xw.repo.BubbleSeekBar

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bsb_bubble_color="@color/colorAccent"
                    app:bsb_bubble_text_color="@color/colorPrimaryDark"
                    app:bsb_max="250000"
                    app:bsb_min="0"
                    app:bsb_progress="0"
                    app:bsb_section_text_size="0sp"
                    app:bsb_second_track_color="@color/colorPrimary"
                    app:bsb_section_count="5"
                    app:bsb_section_text_position="sides"
                    app:bsb_show_progress_in_float="true"
                    app:bsb_show_section_mark="true"
                    app:bsb_show_section_text="true"
                    app:bsb_show_thumb_text="true"
                    app:bsb_track_color="@color/colorAccent" />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/balance_inc"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.xw.repo.BubbleSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bsb_bubble_color="@color/colorAccent"
                    app:bsb_bubble_text_color="@color/colorPrimaryDark"
                    app:bsb_max="50.0"
                    app:bsb_min="0"
                    app:bsb_section_text_size="0sp"
                    app:bsb_progress="0"
                    app:bsb_second_track_color="@color/colorPrimary"
                    app:bsb_section_count="5"
                    app:bsb_section_text_position="sides"
                    app:bsb_show_progress_in_float="true"
                    app:bsb_show_section_mark="true"
                    app:bsb_show_section_text="true"
                    app:bsb_show_thumb_text="true"
                    app:bsb_track_color="@color/colorAccent" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/td"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/balance_dec"
                    android:textAlignment="center" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <com.xw.repo.BubbleSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bsb_bubble_color="@color/colorAccent"
                    app:bsb_bubble_text_color="@color/colorPrimaryDark"
                    app:bsb_max="1000000"
                    app:bsb_min="0"
                    app:bsb_section_text_size="0sp"
                    app:bsb_progress="0"
                    app:bsb_second_track_color="@color/colorPrimary"
                    app:bsb_section_count="5"
                    app:bsb_section_text_position="sides"
                    app:bsb_show_progress_in_float="true"
                    app:bsb_show_section_mark="true"
                    app:bsb_show_section_text="true"
                    app:bsb_show_thumb_text="true"
                    app:bsb_track_color="@color/colorAccent" />

            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:paddingBottom="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any_win"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bonus"
                    android:textAlignment="center"
                    android:textStyle="bold" />


                <Switch

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />


            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jackpot"
                    android:textAlignment="center"
                    android:textStyle="bold" />


                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center" />


            </TableRow>


        </TableLayout>
    </ScrollView>


</RelativeLayout>

